[project]
  name = "pulumi_supabase"
  description = "A Pulumi provider dynamically bridged from supabase."
  dependencies = ["parver>=0.2.1", "pulumi>=3.142.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.5.1"
  [project.urls]
    Repository = "https://github.com/supabase/terraform-provider-supabase"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_supabase = ["py.typed", "pulumi-plugin.json"]
